--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,14 @@ body {
   background-color: #000300;
   font-family: 'Poppins', sans-serif;
 }
+
+@keyframes fadeInScale {
+  0% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
